--- a/package.json
+++ b/package.json
@@ -60,8 +60,10 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-react": "^0.88.2",
     "sequelize": "^5.3.1",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "victory": "^35.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
